--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <link rel="canonical" href="http://hwaseong.8222quick.com/index.html">
       <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
       <link rel="shortcut icon" href="https://ansan.5282quick.com/assets/celeb/image/favicon.png" />
-
+<link rel="alternate" type="application/rss+xml" title="화성퀵 RSS" href="/rss.xml">
       <!-- jQuery 3 -->
       <script src="https://ansan.5282quick.com/assets/celeb/plugins/jquery/jquery.min.js"></script>
 
